<LinearLayout
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/txtNome"
            android:text="@string/main_consumo_row1"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/txtEndereco"
            android:text="@string/main_consumo_row2"
            android:layout_below="@+id/txtNome"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/txtMes"
            android:text="@string/main_consumo_row3"
            android:layout_below="@+id/txtEndereco"/>

    </RelativeLayout>
</LinearLayout>